objects/DMAPP__Political_Map_Contact_Last_Modification__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Adaptability__c</fullName>
        <label>Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laggard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Political Map Contact Last Modifications</relationshipLabel>
        <relationshipName>Political_Map_Contact_Last_Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coverage__c</fullName>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-depth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political__c</fullName>
        <label>Political Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Your Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Political Map Contact Last Modification</label>
    <nameField>
        <label>Political Map Contact Last Modification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Political Map Contact Last Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>